--- a/docs/DomoxClassDiagram.adoc
+++ b/docs/DomoxClassDiagram.adoc
@@ -3,8 +3,11 @@
 --
 @startuml
 
-package requirements {
+package requirements(1) {
     class Author {
+        firstName:String
+        lastName:String
+        eMail:String
     }
     class Document {
         id: Long
@@ -13,28 +16,77 @@ package requirements {
         url:String
         created:TimeStamp
         imported:TimeStamp
+        content: LOB
     }
     Document "1..n" -up- "1..n" Author
+}
 
-    class DocumentContent {
-        content:String
+package nlp(2) {
+    class Sentence {
+        id:Long
+        raw: String
+        parsed: Tree
     }
-    Document -left-> DocumentContent
+
+    class PartOfSpeech {
+        id: Long
+        content: String
+    }
+    enum PosType {
+        NOUN_PHRASE
+        VERB_PHRASE
+        VERB
+        ADVP
+        PP
+        ...
+    }
+    Sentence *- PartOfSpeech
+
+    enum ModelType{
+        acl
+        advcl_if
+        advmod
+        case
+        compound
+        det
+        dobj
+        mark
+        neg
+        nmod_by
+        nmod_on
+        nmod_to
+        nsubj
+        root
+        xcomp
+        ...
+    }
+
+    class ModelDependency {
+        id: Long
+    }
+    ModelDependency -up-> ModelType : type
+
+    class Relation {
+        id:Long
+        relevant: Boolean
+    }
+    enum RelationType {
+        ASSOCIATION
+        AGGREGATION
+        GENERALIZATION
+        ATTRIBUTE
+        BEHAVIOUR
+    }
+    Relation -up-> RelationType : type
+
+    PartOfSpeech -up-> PosType : type
+
+    ModelDependency -left-> "A" PartOfSpeech
+    ModelDependency -left-> "B" PartOfSpeech
+    Relation -left-> "2" ModelDependency
 }
 
-class Analysis {
-    id: Long
-    started: TimeStamp
-    ended: TimeStamp
-    processRequrements()
-    constructDomainModel()
-}
-
-class DomainModel {
-    generatePlantUml()
-}
-
-package type_system {
+package type_system(3) {
     abstract class Candidate {
         name: String
     }
@@ -53,61 +105,33 @@ package type_system {
     ClassCdd -up-> "0..n" PropertyCdd : properties
     ClassCdd -> "0..n" ActionCdd : actions
     ClassCdd "2" -up-> "0..n" AssociationCdd : associations
-}
-DomainModel *-> "1..n" ClassCdd
-Analysis -> DomainModel : output
-Analysis -up-> "1..n" Document : input
 
-
-package nlp {
-    class Annotation {
-        id: Long
-        type:String
-        startNode: Long
-        endNode: Long
+    class DomainModel {
+        generatePlantUml()
     }
-    enum AnnotationType {
+
+    DomainModel *-> "1..n" ClassCdd
+}
+
+Sentence -> Document : content
+
+
+class Analysis {
+    id: Long
+    started: TimeStamp
+    ended: TimeStamp
+    processRequrements()
+    constructDomainModel()
+}
+
+Analysis -up-> "1..n" Document : input
+Analysis -> "0..n" Relation
+Analysis -> DomainModel : output
+
+@enduml
+--
         A1 .. A4
         B1 .. B5
         C1 .. C4
         D1 .. D4
         N1 .. N3
-    }
-
-    class Relation {
-        id:Long
-        relevant: Boolean
-    }
-    enum RelationType {
-        ASSOCIATION
-        AGGREGATION
-        GENERALIZATION
-        ATTRIBUTE
-        BEHAVIOUR
-    }
-
-    class PartOfSpeech {
-        content: String
-    }
-    enum PhraseType {
-        NOUN_PHRASE
-        VERB_PHRASE
-        VERB
-        ADVP
-        PP
-        P
-    }
-
-    Annotation -> DocumentContent
-
-    Annotation -up-> AnnotationType : type
-    Relation -up-> RelationType : type
-    PartOfSpeech -up-> PhraseType : type
-
-    Relation -> "2" PartOfSpeech
-    Annotation -left-> PartOfSpeech
-}
-Analysis -> "0..n" Relation
-
-@enduml
---
