Analysis.init splits & returns the (sample) document

--- a/docs/DomoxClassDiagram.adoc
+++ b/docs/DomoxClassDiagram.adoc
@@ -3,7 +3,7 @@
 --
 @startuml
 
-package "requirements/corpus" {
+package "req" {
     class Author {
         firstName:String
         lastName:String
