Migrate to Apache isis 2.0.0-M6 + introduction of confluence-publisher

--- a/docs/SentenceAnalysis.adoc
+++ b/docs/SentenceAnalysis.adoc
@@ -75,3 +75,40 @@ p7 -> p9 [label="conj:and"]
 }
 @enduml
 --
+tag_map = {
+'NN'   : 'green',
+'NNS'  : 'green',
+'NNP'  : 'green',
+'NNPS' : 'green',
+'VB'   : 'blue',
+'VBD'  : 'blue',
+'VBG'  : 'blue',
+'VBN'  : 'blue',
+'VBP'  : 'blue',
+'VBZ'  : 'blue',
+'JJ'   : 'red',
+'JJR'  : 'red',
+'JJS'  : 'red',
+'RB'   : 'cyan',
+'RBR'  : 'cyan',
+'RBS'  : 'cyan',
+'IN'   : 'darkwhite',
+'POS'  : 'darkyellow',
+'PRP$' : 'magenta',
+'PRP$' : 'magenta',
+'DT'   : 'black',
+'CC'   : 'black',
+'CD'   : 'black',
+'WDT'  : 'black',
+'WP'   : 'black',
+'WP$'  : 'black',
+'WRB'  : 'black',
+'EX'   : 'yellow',
+'FW'   : 'yellow',
+'LS'   : 'yellow',
+'MD'   : 'yellow',
+'PDT'  : 'yellow',
+'RP'   : 'yellow',
+'SYM'  : 'yellow',
+'TO'   : 'yellow',
+}
