--- a/docs/LayeredArchitecture.adoc
+++ b/docs/LayeredArchitecture.adoc
@@ -1,8 +1,8 @@
 [plantuml,file="LayeredArchitecture.png"]
 --
 @startuml
-
-rectangle "Presentation Layer" as PRES {
+skinparam nodesep 4
+rectangle " " as PRES {
     interface " " as P1
     interface " " as P2
     interface " " as P3
@@ -106,7 +106,7 @@ rectangle "Presentation Layer" as PRES {
     end note
 }
 
-rectangle "Control Layer" as CTR {
+rectangle " " as CTR {
     hexagon "&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;" as C1 #orange
     hexagon "&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;" as C2 #orange
     hexagon "&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;" as C3 #orange
@@ -124,7 +124,7 @@ C3 .u.> P3
 C4 .u.> P3
 C4 .u.> P4
 
-rectangle "Domain Layer" as DOM {
+rectangle " " as DOM {
         circle " " as D1 #lightyellow
         circle " " as D2 #lightyellow
         circle " " as D3 #lightyellow
@@ -138,7 +138,7 @@ rectangle "Domain Layer" as DOM {
         D4 -[hidden] D5
         D5 -[hidden] D6
 }
-C1 .> D1
+C1 .d.> D1
 C1 .> D2
 C2 .> D2
 C2 .> D3
@@ -150,7 +150,7 @@ C3 .> D6
 C4 .> D6
 
 
-rectangle "Persistence Layer" as PERS {
+rectangle " " as PERS {
     map T1 #green {
          1 => \t
          2 => \t
@@ -194,9 +194,65 @@ PRES -[hidden]d- CTR
 CTR -[hidden]d- DOM
 DOM -[hidden]d- PERS
 
-file "Smart UI\nAnti-Pattern" as AP #lightyellow
-AP .l..> CTR
-AP .u..> PRES
+'file "Smart UI\nAnti-Pattern" as AP #lightyellow
+'AP .l..> CTR
+'AP .u..> PRES
+
+rectangle "Presentation Layer" as PRESL #white
+rectangle "Application/Control Layer" as APPL #white
+rectangle "Domain Layer" as DOML #white
+rectangle "Persistence Layer" as PERSL #white
+PRESL -[hidden]- APPL
+APPL -[hidden]- DOML
+DOML -[hidden]- PERSL
+
+rectangle " " as PRES_NO #lightblue {
+    ( ) as V1 #lightgrey
+    ( ) as V2 #lightgrey
+    ( ) as V3 #lightgrey
+    ( ) as V4 #lightgrey
+    ( ) as V5 #lightgrey
+    ( ) as V6 #lightgrey
+}
+
+rectangle " " as DOM_NO {
+        (<color:orange>&#9632;) as DO1 #lightyellow
+        (<color:orange>&#9632;) as DO2 #lightyellow
+        (<color:orange>&#9632;) as DO3 #lightyellow
+        (<color:orange>&#9632;) as DO4 #lightyellow
+        (<color:orange>&#9632;) as DO5 #lightyellow
+        (<color:orange>&#9632;) as DO6 #lightyellow
+}
+DO1 .u..> V1
+DO2 .u.> V2
+DO3 .u.> V3
+DO4 .u.> V4
+DO5 .u.> V5
+DO6 .u.> V6
+
+rectangle " " as PERS_NO #lightgreen {
+    (E) as E1 #green
+    (E) as E2 #green
+    (E) as E3 #green
+    (E) as E4 #green
+    (E) as E5 #green
+    (E) as E6 #green
+}
+DO1 .> E1
+DO2 .> E2
+DO3 .> E3
+DO4 .> E4
+DO5 .> E5
+DO6 .> E6
+
+PRES_NO -[hidden]d- DOM_NO
+DOM_NO -[hidden]d- PERS_NO
+
+PRES -[hidden]r- PRESL
+PRESL -[hidden]r- PRES_NO
+
+DOM -[hidden]r- DOML
+DOML -[hidden]r- DOM_NO
 
 @enduml
 --
