fw qualities updated

--- a/docs/framework/frameworkQualities.adoc
+++ b/docs/framework/frameworkQualities.adoc
@@ -17,9 +17,9 @@ file "<$user{scale=0.5}>\nDeveloper\nHappiness" as dh #white
 (<b>Domain\n<b>Driven\n<b>Design) as ddd #lightblue
 (Test\nAutomation) as ta #lightblue
 (Documentation) as doc #lightblue
-fw ---> ddd : enforces\nuse of
-ddd ---> p : is a\ncollection of
-fw ---> doc : has\nextensive
+fw --> ddd : enforces\nuse of
+ddd --> p : is a\ncollection of
+fw --> doc : has\nextensive
 doc --> p : refers to
 doc --> c : contributes\nto
 p --> c : use of DP.\nis\nBestPractice
@@ -29,19 +29,17 @@ together {
     (<$cog{scale=0.5}>\nGenerated\nUI) as uig #lightgreen
     (<$cog{scale=0.5}>\nGenerated\nDB) as dbg #lightgreen
     (<$cog{scale=0.5}>\nGenerated\nRESTful\nAPI) as ro #lightgreen
-    (Standard\nComponents) as std #lightgreen
 }
 (Sustainable\nCode) as sc #lightgreen
 fw -> uig : offers
 fw -> dbg : offers
 fw -> ro : offers
-fw -> std : is based on
 uig --> ta : promotes
 ta --> sc
 c --> sc
 
 '// role
-(<B>Lean Code</B>\nDevelopment\nPlatform) as lc #yellow
+(<B>Lean Code</B>\nDevelopment\nPlatform) as lc #gold
 'URL="https://en.wikipedia.org/wiki/Low-code_development_platforms" style=filled fillcolor=yellow]
 
 lc ---> c
@@ -60,7 +58,6 @@ dh --> hr : increases\nsupply of
 hr --> sc
 ttm -> es
 pdc -> es
-std --> hr :use of SC.\nincreases\nsupply of
 
 '// notes
 file "Allows for tight \n<B>feedback loop </B>,\n ideal for \n<B>agile</B> projects" as uig_note #lightyellow
@@ -84,12 +81,6 @@ projects
 end note
 
 ddd ..> uig : suggests \nto avoid \n <B>Smart UI </B>,\n Anti Pattern
-
-note bottom of std
-* Spring Boot <$envira{scale=0.4}>
-* JPA
-* etc.
-end note
 
 @enduml
 --
