app starts (with menu), but without sample data

--- a/domox-webapp/translations.po
+++ b/domox-webapp/translations.po
@@ -195,7 +195,7 @@ msgstr ""
 
 
 #: org.apache.causeway.applib.domain.DomainObjectList#elementObjectType
-msgid "Element Object Type"
+msgid "Element String type"
 msgstr ""
 
 
