--- a/docs/framework/simple_app_bootstrap.adoc
+++ b/docs/framework/simple_app_bootstrap.adoc
@@ -4,7 +4,7 @@
 @startuml
 
 package "webapp/src/main/java" {
-    package "domainapp.webapp" {
+    package "domainapp/webapp" {
         class SimpleApp {
             @SpringBootApplication
             @Import(AppManifest.class)
@@ -26,14 +26,14 @@ package "webapp/src/main/java" {
 }
 
 package "module-simple/src/main/java" {
-    package "domainapp.modules.simple" {
+    package domainapp/modules/simple {
         class SimpleModule {
             @Configuration
             @ComponentScan
             @EnableJpaRepositories
             @EntityScan(basePackageClasses = {SimpleModule.class})
         }
-        package "dom.so" {
+        package "dom/so" {
             class SimpleObject{
                 @Entity
                 @Table
