--- a/domox-service/src/test/kotlin/README.adoc
+++ b/domox-service/src/test/kotlin/README.adoc
@@ -1,11 +1,31 @@
+# Sample Call
+'''
+curl -X POST \
+  http://localhost:9000/?properties='{"annotators":"tokenize,ssplit,pos,lemma,ner,sentiment","outputFormat":"json"}' \
+  -H "Content-Type: text/plain" \
+  -d "I love using Stanford CoreNLP for natural language processing!"
+'''
+
+## Sample NLP output
+
 root(ROOT-0, has-4)
+
 det(tape-3, a-1)
+
 compound(tape-3, language-2)
+
 nsubj(has-4, tape-3)
+
 det(language-7, a-5)
+
 compound(language-7, title-6)
+
 dobj(has-4, language-7)
+
 cc(language-7, and-8)
+
 dobj(has-4, level-9)
+
 conj:and(language-7, level-9)
+
 punct(has-4, .-10)
